--- a/index.html
+++ b/index.html
@@ -1,15 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
+        integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
     <title>Fibonacci</title>
-    <h1>Serie Fibonachi</h1>
-
 </head>
+
 <body>
-    <script src="./app.js" type="module"> </script>
-    
+    <div class="container">
+        <div class="panel panel-primary">
+            <div class="panel-heading"><strong>Serie Fibonacci</strong>
+            </div>
+            <div class="panel-body">
+                <br>
+                <br>
+                <input id="number" name="numero" class="form-control" type="number" placeholder="ingresa un numero">
+                <br>
+                <br>
+
+                <button class="btn btn-success btn-block" onclick="fibonacci()"> Generar serie fibonacci</button>
+            </div>
+            <div class="panel-footer" id="resultado" style="word-wrap: break-word;"></div>
+        </div>
+    </div>
+    <script src="app.js"></script>
 </body>
 </html>
